Tue Jun 17 16:05:57 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>

        * tests/DCPS/Compiler/idl_test3_main/main.cpp:

          Fixed a warning for Borland.

Tue Jun 17 07:41:11 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:

          Addressed crashes that were introduced during the memory
          management rewrite.

        * dds/DCPS/DataWriterImpl.cpp (enable):

          Retrieve data from the durability cache after the DataWriter is
          completely enabled.  Addresses a publication ID mismatch error.

        * tests/DCPS/PersistentDurability/publisher.cpp:
        * tests/DCPS/TransientDurability/publisher.cpp:

          Set the DURABILITY_SERVICE DataWriter QoS policy history_kind
          value to ::DDS::KEEP_ALL_HISTORY_QOS so that all samples are
          persisted, instead of the default (one).

Tue Jun 17 04:49:17 UTC 2008  Ossama Othman  <othmano@ociweb.com>

        * dds/DCPS/DataDurabilityCache.cpp:

          Updated some comments to avoid referring to unsent data.

        * dds/DCPS/PublisherImpl.cpp (delete_datawriter):

          Initiate durability related data caching prior to unregistering
          all samples.  Addresses problem where sample list was of zero
          size by the time durability caching occurred.

        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataWriterImpl.h:
        * dds/DCPS/WriteDataContainer.cpp (persist_data):
        * dds/DCPS/WriteDataContainer.h (persist_data):

          New method explicitly called by publisher servant to trigger
          durability related caching, as opposed to implicit caching at
          WriteDataContainer destruction-time.

Mon Jun 16 21:22:24 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportImpl.h:

          Added one more #include needed by Borland.

Mon Jun 16 08:47:45 UTC 2008  Ossama Othman  <othmano@ociweb.com>
