@@ -1,3 +1,9 @@
+Tue Jun 17 18:39:13 UTC 2008  Ossama Othman  <othmano@ociweb.com>
+
+        * tests/DCPS/Partition/Partition_Table.h (PartitionConfig):
+
+          Added constructor to silence g++ 3.2 and Borland C++ warnings.
+
 Tue Jun 17 16:05:57 UTC 2008  Jonathan Pollack  <pollack_j@ociweb.com>
 
         * tests/DCPS/Compiler/idl_test3_main/main.cpp:
